test/success/integration/_succ_decl_3.hs
x :: Int -> Int
x y = y
main = print "hello"