test/fail/integration/_fail_grammar_funct_part_2.hs
x :: Int
x =
main = print "hello"